httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - httpbin.example.com
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - httpbin.example.com
      port:
        name: https-443
        number: 443
        protocol: HTTPS
      tls:
        credentialName: httpbin-credential
        mode: SIMPLE

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "httpbin.example.com"
  gateways:
    - httpbin-gateway
  http:
    - route:
        - destination:
            host: httpbin
            port:
              number: 8000
  tls:
    - match:
        - sniHosts:
            - "httpbin.example.com"
      route:
        - destination:
            host: httpbin
            port:
              number: 8000
